--- a/core/templates/index.html
+++ b/core/templates/index.html
@@ -54,7 +54,8 @@
                         <a href="#about" class="home__scroll-link"><i class='bx bx-up-arrow-alt' ></i>Scroll down</a>
                     </div>
 
-                    <img src="{{ home.picture.url }}" alt="" class="home__img" style="width:430px;height:600px;">
+                    <!--<img src="{{ home.picture.url }}" alt="" class="home__img" style="width:430px;height:600px;">-->
+                    <img class="home__img" src="{%static 'assets/img/foto_oriol-removebg-preview.png'%}" alt="">
                 </div>
             </section>
             
